Añadido VLCJ para leer archivos .ogg, reestructurado el código y mejorada la interfaz